--- a/_posts/2025-03-05-ad-info.markdown
+++ b/_posts/2025-03-05-ad-info.markdown
@@ -8,4 +8,4 @@ categories: blog
 
 
 # AdMob app-ads.txt file
-google.com, pub-9642915726528387 DIRECT, f08c47fec0942fa0
+google.com, pub-9642915726528387, DIRECT, f08c47fec0942fa0
